--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ height: 90vh;
 background-color: var(--grey);
 display: grid;
 grid-template-columns: 1fr 1fr 1fr 1fr;
-grid-template-rows: 1fr 1fr 1fr 1fr;
+grid-template-rows: 1fr 1fr 1fr;
 gap: 2rem;
 margin-bottom: 1rem;
 }
@@ -200,15 +200,19 @@ grid-column: 3 / 4;
 grid-row: 2 / 3;
 }
 
-.portfolio {
-grid-column: 3 / 4;
-grid-row: 3 / 4;
+.intro_text p {
+padding-bottom: 1rem;
 }
 
-.portfolio img {
+.intro .icons {
 display: inline-block;
 width: 8%;
 margin-right: 0.3rem;
+}
+
+.profilbillede {
+grid-column: 2 / 3;
+grid-row: 2 / 3;
 }
 
 /* indhold indhold indhold indhold indhold */
@@ -243,7 +247,7 @@ grid-column: 1 / 3;
 grid-column: 3 / 5;
 }
 
-@media all and (max-width: 870px) {
+@media all and (max-width: 630px) {
 .grid1 {
 display: block;
 width: 100%;
@@ -268,12 +272,21 @@ padding-bottom: 0.5rem;
 .grid1_text2 {
 padding-bottom: 4rem;
 }
+}
 
+@media all and (max-width: 850px) {
 .intro {
-display: grid;
-grid-template-columns: 1fr 2fr 1fr;
-grid-template-rows: 1fr 2fr 1fr 1fr;
+display: block;
 gap: 0.5rem;
+height: auto;
+width: 75%;
+margin: 0 auto;
+padding: 2rem;
+background-color: white;
+}
+
+.intro img {
+padding-bottom: 1rem;
 }
 
 .intro h1 {
@@ -293,9 +306,9 @@ grid-column: 2 / 3;
 grid-row: 2 / 3;
 }
 
-.portfolio {
-grid-column: 2/ 3;
-grid-row: 3 / 4;
+.profilbillede {
+grid-column: 2 / 3;
+grid-row: 1 / 2;
 }
 }
 
