--- a/css/style.css
+++ b/css/style.css
@@ -45,17 +45,17 @@ transition: 1s;
 }
 
 h1 {
-font-weight: 700;
+font-weight: 800;
 font-size: 3rem;
 line-height: 0.9;
 padding-bottom: 1rem;
 }
 
 h2 {
-font-weight: 500;
-font-size: 1.5rem;
-line-height: 1.1;
-padding-bottom: 1rem;
+font-weight: 600;
+font-size: 1rem;
+line-height: 1.3;
+padding-bottom: 0.6rem;
 color: var(--offgrey);
 }
 
@@ -68,29 +68,17 @@ color: var(--offgrey);
 }
 
 p {
-font-weight: 400;
+font-weight: 300;
 font-size: 0.8rem;
+padding-bottom: 0.7rem;
 }
 
 .grey {
 color: var(--grey);
 }
 
-.darkgrey {
-color: var(--offgrey);
-}
-
-.green {
-color: var(--green);
-}
-
-.darkgreen {
-color: var(--darkgreen);
-}
-
 .light {
-font-weight: 300;
-}
+font-weight: 400;}
 
 /* navigation navigation navigation navigation navigation */
 
@@ -98,14 +86,14 @@ header {
 position: sticky;
 top: 0;
 width: 100%;
-background-color: var(--offwhite);
+background-color: var(--offgrey);
 }
 
 .logo h1 {
 font-size: 2rem;
-padding-top: 1.2rem;
-color: var(--darkgreen);
-font-weight: 600;
+padding-top: 1.5rem;
+color: var(--offwhite);
+font-weight: 700;
 }
 
 .navbar {
@@ -114,19 +102,20 @@ justify-content: space-around;
 }
 
 .nav_list {
-  list-style-type: none;
+list-style-type: none;
 }
 
 .nav_list, 
 li {
-  display: inline-block;
-  padding: 0.8rem 1rem;
+display: inline-block;
+padding: 0.8rem 1rem;
 }
 
 .navbar a {
 text-decoration: none;
 font-size: 0.8rem;
-color: var(--offgrey);
+color: var(--offwhite);
+font-weight: 600;
 }
 
 .navbar a:hover {
@@ -142,15 +131,15 @@ display: none;
 width: 20px;
 height: 2px;
 margin-bottom: 4px;
-background-color: var(--offgrey);
+background-color: var(--offwhite);
 }
 
 /* om mig om mig om mig om mig om mig */
 
 .intro {
-width: 100vw;
-height: 90vh;
-background-color: var(--grey);
+width: 100%;
+height: 700px;
+background-color: var(--offwhite);
 display: grid;
 grid-template-columns: 1fr 1fr 1fr 1fr;
 grid-template-rows: 1fr 1fr 1fr;
@@ -158,17 +147,9 @@ gap: 2rem;
 margin-bottom: 1rem;
 }
 
-.intro a:hover {
-background-color: white;
-}
-
 .intro_text {
 grid-column: 3 / 4;
 grid-row: 2 / 3;
-}
-
-.intro_text p {
-padding-bottom: 1rem;
 }
 
 .intro .icons {
@@ -189,7 +170,6 @@ display: grid;
 grid-template-columns: 1fr 1fr 1fr 1fr;
 width: 70%;
 margin: 0 auto;
-margin-bottom: 2rem;
 gap: 1rem;
 }
 
@@ -201,17 +181,34 @@ color: var(--offgrey);
 grid-column: 1 / 5;
 }
 
-.grid1_text1,
-.grid1_text2 {
+.grid1_text {
 padding: 2rem;
-}
-
-.grid1_text1 {
 grid-column: 1 / 3;
 }
 
-.grid1_text2 {
-grid-column: 3 / 5;
+.grid1_text a {
+font-weight: 700;
+color: var(--offgrey);
+text-decoration: none;
+}
+
+.grid1_text a:hover {
+color: var(--green);
+transition: 1s;
+}
+
+.grid1_text h2 {
+font-size: 1.6rem;
+font-weight: 700;
+line-height: 1;
+}
+
+/* responsiv responsiv responsiv responsiv responsiv responsiv */
+
+@media all and (max-width: 850px) {
+.grid1_text {
+grid-column: 1 / 4;
+}
 }
 
 @media all and (max-width: 630px) {
@@ -220,24 +217,18 @@ display: block;
 width: 100%;
 }
 
-.grid1_text1,
-.grid1_text2 {
+.grid1_text {
 padding: 0;
 width: 70%;
 margin: 0 auto;
 }
 
-.grid1_text1 {
-padding-top: 1rem;
-
+.grid1_text {
+padding-bottom: 1.5rem;
 }
 
 .grid1_img {
-padding-bottom: 0.5rem;
-}
-
-.grid1_text2 {
-padding-bottom: 4rem;
+padding-bottom: 1.5rem;
 }
 
 .navbar {
@@ -248,7 +239,7 @@ display: block;
 
 .logo {
 padding-left: 1rem;
-padding-bottom: 1rem;
+padding-bottom: 0.5rem;
 width: 10%;
 }
 
@@ -261,8 +252,6 @@ right: 35px;}
 .nav_list, 
 li {
 display: block;
-border-bottom: 1px solid white;
-text-align: center;
 }
 
 .nav_list {
@@ -270,7 +259,8 @@ list-style: none;
 width: 100%;
 padding: 0;
 margin: 0;
-display: none;}
+display: none;
+}
 
 .active {
 display: block;
@@ -320,5 +310,5 @@ grid-row: 1 / 2;
 footer {
 background-color: var(--offgrey);
 width: 100%;
-height: 15vh;
+height: 10vh;
 }
