--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ margin: 0;
 --darkgreen: #4C7867;
 --grey: #b6b6b6;
 font-family: montserrat, sans-serif;
+color: var(--offgrey);
 }
 
 /* generelt generelt generelt generelt generelt*/
@@ -143,7 +144,7 @@ background-color: var(--offwhite);
 display: grid;
 grid-template-columns: 1fr 1fr 1fr 1fr;
 grid-template-rows: 1fr 1fr 1fr;
-gap: 2rem;
+gap: 2.5rem;
 margin-bottom: 1rem;
 }
 
@@ -152,10 +153,19 @@ grid-column: 3 / 4;
 grid-row: 2 / 3;
 }
 
+.intro h1 {
+color: var(--darkgreen);
+}
+
 .intro .icons {
 display: inline-block;
 width: 8%;
 margin-right: 0.3rem;
+}
+
+.profilbillede img {
+background-color: var(--green);
+border-radius: 100%;
 }
 
 .profilbillede {
@@ -170,7 +180,6 @@ display: grid;
 grid-template-columns: 1fr 1fr 1fr 1fr;
 width: 70%;
 margin: 0 auto;
-gap: 1rem;
 }
 
 .grid1 p {
@@ -186,18 +195,26 @@ padding: 2rem;
 grid-column: 1 / 3;
 }
 
-.grid1_text a {
+.grid1_text2 {
+padding: 2rem;
+grid-column: 3 / 5;
+}
+
+.grid1_text a,
+.grid1_text2 a {
 font-weight: 700;
 color: var(--offgrey);
 text-decoration: none;
 }
 
-.grid1_text a:hover {
+.grid1_text a:hover,
+.grid1_text2 a:hover {
 color: var(--green);
 transition: 1s;
 }
 
-.grid1_text h2 {
+.grid1_text h2,
+.grid1_text2 h2 {
 font-size: 1.6rem;
 font-weight: 700;
 line-height: 1;
@@ -209,28 +226,26 @@ line-height: 1;
 .grid1_text {
 grid-column: 1 / 4;
 }
-}
 
-@media all and (max-width: 630px) {
 .grid1 {
 display: block;
 width: 100%;
 }
 
-.grid1_text {
+.grid1_text,
+.grid1_text2 {
 padding: 0;
 width: 70%;
 margin: 0 auto;
-}
-
-.grid1_text {
 padding-bottom: 1.5rem;
 }
 
 .grid1_img {
 padding-bottom: 1.5rem;
 }
+}
 
+@media all and (max-width: 630px) {
 .navbar {
 flex-direction: column;
 position: relative;
@@ -282,6 +297,10 @@ background-color: white;
 padding-bottom: 1rem;
 }
 
+.profilbillede {
+padding-bottom: 1.5rem;
+}
+
 .intro h1 {
 font-size: 2.1rem;
 }
@@ -292,16 +311,6 @@ font-size: 1rem;
 
 .intro p {
 font-size: 0.7rem;
-}
-
-.intro_text {
-grid-column: 2 / 3;
-grid-row: 2 / 3;
-}
-
-.profilbillede {
-grid-column: 2 / 3;
-grid-row: 1 / 2;
 }
 }
 
