--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@ font-weight: 600;
 font-size: 1rem;
 line-height: 1.3;
 padding-bottom: 0.6rem;
-color: var(--offgrey);
 }
 
 h3 {
@@ -65,7 +64,6 @@ font-weight: 600;
 font-size: 1rem;
 line-height: 1;
 padding-bottom: 0.7rem;
-color: var(--offgrey);
 }
 
 p {
@@ -177,8 +175,39 @@ grid-row: 2 / 3;
 .hero {
 width: 100%;
 height: 100vh;
-background-color: var(--green);
+margin: 0 auto;
+display: grid;
+background-color: #8fc5b062;
+grid-template-columns: 1fr 1fr 1fr;
+grid-template-rows: 1fr 2fr 1fr;
 margin-bottom: 1rem;
+}
+
+.hero h1 {
+color: var(--darkgreen);}
+
+.hero h2 {
+width: 75%;
+}
+
+.hero p {
+width: 75%;
+}
+
+.hero a {
+font-weight: 700;
+text-decoration: none;
+text-decoration: underline;
+}
+
+.hero a:hover {
+color: var(--darkgreen);
+transition: 1s;
+}
+
+.hero_text {
+grid-column: 2 / 3;
+grid-row: 2 / 3;
 }
 
 /* indhold indhold indhold indhold indhold */
@@ -188,10 +217,6 @@ display: grid;
 grid-template-columns: 1fr 1fr 1fr 1fr;
 width: 70%;
 margin: 0 auto;
-}
-
-.grid1 p {
-color: var(--offgrey);
 }
 
 .grid1_img {
@@ -211,13 +236,12 @@ grid-column: 3 / 5;
 .grid1_text a,
 .grid1_text2 a {
 font-weight: 700;
-color: var(--offgrey);
-text-decoration: none;
+text-decoration: underline;
 }
 
 .grid1_text a:hover,
 .grid1_text2 a:hover {
-color: var(--green);
+color: var(--darkgreen);
 transition: 1s;
 }
 
@@ -229,29 +253,6 @@ line-height: 1;
 }
 
 /* responsiv responsiv responsiv responsiv responsiv responsiv */
-
-@media all and (max-width: 850px) {
-.grid1_text {
-grid-column: 1 / 4;
-}
-
-.grid1 {
-display: block;
-width: 100%;
-}
-
-.grid1_text,
-.grid1_text2 {
-padding: 0;
-width: 70%;
-margin: 0 auto;
-padding-bottom: 1.5rem;
-}
-
-.grid1_img {
-padding-bottom: 1.5rem;
-}
-}
 
 @media all and (max-width: 630px) {
 .navbar {
@@ -291,9 +292,29 @@ display: block;
 }
 
 @media all and (max-width: 850px) {
+.grid1_text {
+grid-column: 1 / 4;
+}
+
+.grid1 {
+display: block;
+width: 100%;
+}
+
+.grid1_text,
+.grid1_text2 {
+padding: 0;
+width: 70%;
+margin: 0 auto;
+padding-bottom: 1.5rem;
+}
+
+.grid1_img {
+padding-bottom: 1.5rem;
+}
+
 .intro {
 display: block;
-gap: 0.5rem;
 height: auto;
 width: 75%;
 margin: 0 auto;
@@ -320,6 +341,26 @@ font-size: 1rem;
 .intro p {
 font-size: 0.7rem;
 }
+
+.hero {
+display: block;
+height: auto;
+padding: 2rem;
+}
+
+.hero_text {
+width: 75%;
+margin: 0 auto;
+}
+
+.hero h2 {
+width: 100%;
+}
+
+.hero p {
+width: 100%;
+}
+
 }
 
 /* footer footer footer footer footer footer */
