--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,10 @@ line-height: 1.5;
 
 img {
 max-width: 100%;
-width: 100%;
 height: 100%;
-height: auto;
 display: block;
 object-fit: cover;
+width: 100%;
 }
 
 button {
@@ -77,7 +76,15 @@ color: var(--grey);
 }
 
 .light {
-font-weight: 400;}
+font-weight: 400;
+}
+
+.bold {
+font-weight: 700;
+color: var(--offwhite);
+border-bottom: solid 5px var(--green);
+padding-bottom: 1.5rem;
+}
 
 /* navigation navigation navigation navigation navigation */
 
@@ -119,7 +126,8 @@ font-weight: 400;
 
 .navbar a:hover {
 color: var(--green);
-transition: 1s;
+border-bottom: solid 5px var(--green);
+padding-bottom: 1.5rem;
 }
 
 .menu {
@@ -131,6 +139,37 @@ width: 20px;
 height: 2px;
 margin-bottom: 4px;
 background-color: var(--offwhite);
+}
+
+/* undersider undersider undersider undersider */
+
+.grid2 {
+display: grid;
+grid-template-columns: 1fr 1fr;
+width: 80%;
+margin: 0 auto;
+margin-top: 1rem;
+max-width: 900px;
+}
+
+.grid2 h2 {
+font-size: 1.6rem;
+font-weight: 700;
+line-height: 1;
+}
+
+.grid2 a {
+font-weight: 700;
+text-decoration: underline;
+}
+
+.grid2 a:hover {
+color: var(--darkgreen);
+transition: 1s;
+}
+
+.grid2_text {
+padding: 2rem;
 }
 
 /* om mig om mig om mig om mig om mig */
@@ -286,30 +325,47 @@ margin: 0;
 display: none;
 }
 
+.bold {
+font-weight: 700;
+color: var(--offwhite);
+border-bottom: solid 2px var(--green);
+padding-bottom: 0.5rem;
+}
+
+.navbar a:hover {
+color: var(--green);
+border-bottom: solid 2px var(--green);
+padding-bottom: 0.5rem;
+}
+
 .active {
 display: block;
 }
 }
 
 @media all and (max-width: 850px) {
-.grid1_text {
+.grid1_text,
+.grid2_text {
 grid-column: 1 / 4;
 }
 
-.grid1 {
+.grid1,
+.grid2 {
 display: block;
 width: 100%;
 }
 
 .grid1_text,
-.grid1_text2 {
+.grid1_text2,
+.grid2_text {
 padding: 0;
 width: 70%;
 margin: 0 auto;
 padding-bottom: 1.5rem;
 }
 
-.grid1_img {
+.grid1_img,
+.grid2 img {
 padding-bottom: 1.5rem;
 }
 
