--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,13 @@ margin: 0 auto;
 line-height: 1.5;
 }
 
-img {
+img,
+video {
 max-width: 100%;
-height: 100%;
+width: auto;
 display: block;
 object-fit: cover;
-width: 100%;
+height: 100%;
 }
 
 button {
@@ -56,6 +57,7 @@ font-weight: 600;
 font-size: 1rem;
 line-height: 1.3;
 padding-bottom: 0.6rem;
+color: var(--darkgreen);
 }
 
 h3 {
@@ -191,6 +193,11 @@ grid-row: 2 / 3;
 
 .intro h1 {
 color: var(--darkgreen);
+}
+
+.intro img {
+width: 100%;
+height: auto;
 }
 
 .intro .icons {
@@ -365,7 +372,8 @@ padding-bottom: 1.5rem;
 }
 
 .grid1_img,
-.grid2 img {
+.grid2 img,
+.grid2 video {
 padding-bottom: 1.5rem;
 }
 
