--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,8 @@ font-weight: 400;
 .bold {
 font-weight: 700;
 color: var(--offwhite);
-border-bottom: solid 5px var(--green);
-padding-bottom: 1.5rem;
+border-top: solid 5px var(--green);
+padding-top: 1.5rem;
 }
 
 /* navigation navigation navigation navigation navigation */
@@ -128,8 +128,8 @@ font-weight: 400;
 
 .navbar a:hover {
 color: var(--green);
-border-bottom: solid 5px var(--green);
-padding-bottom: 1.5rem;
+border-top: solid 5px var(--green);
+padding-top: 1.5rem;
 }
 
 .menu {
@@ -150,7 +150,7 @@ display: grid;
 grid-template-columns: 1fr 1fr;
 width: 80%;
 margin: 0 auto;
-margin-top: 1rem;
+margin-block: 1rem;
 max-width: 900px;
 }
 
@@ -337,12 +337,14 @@ font-weight: 700;
 color: var(--offwhite);
 border-bottom: solid 2px var(--green);
 padding-bottom: 0.5rem;
+border-top: none;
 }
 
 .navbar a:hover {
 color: var(--green);
 border-bottom: solid 2px var(--green);
 padding-bottom: 0.5rem;
+border-top: none;
 }
 
 .active {
@@ -350,7 +352,7 @@ display: block;
 }
 }
 
-@media all and (max-width: 850px) {
+@media all and (max-width: 700px) {
 .grid1_text,
 .grid2_text {
 grid-column: 1 / 4;
@@ -432,5 +434,26 @@ width: 100%;
 footer {
 background-color: var(--offgrey);
 width: 100%;
-height: 10vh;
+}
+
+.footer_text {
+width: 100%;
+padding-block: 1.5em;
+margin: 0 auto;
+}
+
+footer p,
+footer h3 {
+color: var(--offwhite);
+padding: 0;
+text-align: center;
+}
+
+footer h3 {
+font-size: 0.8rem;
+padding-bottom: 0.2rem;
+}
+
+footer p {
+font-size: 0.6rem;
 }
