--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,7 @@ display: grid;
 grid-template-columns: 1fr 1fr 1fr 1fr;
 grid-template-rows: 1fr 1fr 1fr;
 gap: 2.5rem;
+margin-bottom: 2rem;
 }
 
 .intro_text {
@@ -214,6 +215,47 @@ border-radius: 100%;
 .profilbillede {
 grid-column: 2 / 3;
 grid-row: 2 / 3;
+}
+
+.cv {
+background-color: var(--darkgreen);
+margin-bottom: 2rem;
+}
+
+.cv h2 {
+font-weight: 800;
+line-height: 1;
+color: var(--offgrey);
+font-size: 2.5rem;
+text-align: center;
+padding-top: 2.5rem;
+margin: 0 auto;
+color: var(--offwhite);
+}
+
+.cv h4 {
+margin: 0 auto;
+text-align: center;
+color: var(--offwhite);
+font-weight: 300;
+}
+
+.cv h3 {
+line-height: 1.3;
+color: var(--green);
+}
+
+.cv p {
+color: var(--offwhite);
+}
+
+.cv_container {
+width: 70%;
+display: grid;
+grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+margin: 0 auto;
+gap: 3rem;
+padding-block: 3rem;
 }
 
 /* forside forside forside forside forside */
@@ -296,6 +338,26 @@ transition: 1s;
 font-size: 1.6rem;
 font-weight: 700;
 line-height: 1;
+}
+
+/* footer footer footer footer footer footer */
+
+footer {
+background-color: var(--offgrey);
+width: 100%;
+}
+
+.footer_text {
+width: 100%;
+padding-block: 1.5em;
+margin: 0 auto;
+}
+
+footer p {
+color: var(--offwhite);
+padding: 0;
+font-size: 0.6rem;
+text-align: center;
 }
 
 /* responsiv responsiv responsiv responsiv responsiv responsiv */
@@ -431,24 +493,4 @@ width: 100%;
 .hero p {
 width: 100%;
 }
-}
-
-/* footer footer footer footer footer footer */
-
-footer {
-background-color: var(--offgrey);
-width: 100%;
-}
-
-.footer_text {
-width: 100%;
-padding-block: 1.5em;
-margin: 0 auto;
-}
-
-footer p {
-color: var(--offwhite);
-padding: 0;
-font-size: 0.6rem;
-text-align: center;
 }
