--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,7 @@ color: var(--offwhite);
 }
 
 .cv_container {
-width: 70%;
+width: 60%;
 display: grid;
 grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 margin: 0 auto;
@@ -473,6 +473,17 @@ font-size: 1rem;
 
 .intro p {
 font-size: 0.7rem;
+}
+
+.cv_container {
+display: block;
+width: 70%;
+padding: 0;
+padding-top: 1rem;
+}
+
+.cv_text {
+padding-bottom: 2rem;
 }
 
 .hero {
