--- a/css/style.css
+++ b/css/style.css
@@ -362,13 +362,6 @@ text-align: center;
 
 /* responsiv responsiv responsiv responsiv responsiv responsiv */
 
-@media all and (max-width: 1100px) {
-img,
-video {
-height: auto;
-}
-}
-
 @media all and (max-width: 810px) {
 .navbar {
 flex-direction: column;
@@ -418,6 +411,12 @@ border-top: none;
 
 .active {
 display: block;
+}
+
+img,
+video {
+width: 100%;
+height: auto;
 }
 
 .grid1_text,
