--- a/css/style.css
+++ b/css/style.css
@@ -363,16 +363,18 @@ text-align: center;
 /* responsiv responsiv responsiv responsiv responsiv responsiv */
 
 @media all and (max-width: 1100px) {
-.navbar {
-flex-direction: column;
-position: relative;
-display: block;
-}
-
 img,
 video {
 width: 100%;
 height: auto;
+}
+}
+
+@media all and (max-width: 810px) {
+.navbar {
+flex-direction: column;
+position: relative;
+display: block;
 }
 
 .logo {
